start to add reports in LfNetworkLoaderImpl